modify routes cars and add docs routes cars
